--- a/src/sass/styles.css
+++ b/src/sass/styles.css
@@ -175,11 +175,19 @@ body {
      cursor: pointer;
  }
 
- .gallery {
+ /* .gallery {
      display: grid;
      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
      grid-gap: 20px;
      margin-top: 20px;
+ } */
+
+ .gallery {
+     display: flex;
+     justify-content: center;
+     flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
  }
 
  /* b.icon {
@@ -203,3 +211,37 @@ body {
      background-image: url('../images/view.svg');
      /* Replace with your download icon image */
  /* } */ 
+
+ .flex {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            font-size: 12px;
+        }
+ 
+.card {
+        margin-top: 30px;
+        margin-left: 30px;
+        display: auto;
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    }
+
+/* .container  {
+     padding: 10px;
+     display: flex;
+     justify-content: space-between;
+ } */
+
+ .header {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     padding: 30px 0;
+     background-color: #35191f;
+ }
+
+.info {
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+}
